[workspace]
# This should only list projects that are not
# in the dependency tree in any other way
members = [
    "types",
    "config",
    "crypto",
    "tools/genconfig",
    "consensus",
    # "comm", (WIP: Do not enable unless testing)
    # RBC module
    "consensus/appxcon",
    "consensus/hyb_appxcon",
    "node",
    #"consensus/ct_rbc",
    #"consensus/hash_cc",
    #"consensus/hash_cc_baa",
    #"consensus/pedavss_cc",
]
